Revision history for {{$dist->name}}

{{$NEXT}}

0.005     2011-09-08 08:35:50 America/New_York
          the LWP::UserAgent should now respect HTTP proxies specified by the
          environment (Thanks, Piers Cawley!)

0.004     2011-08-18 11:05:31 America/New_York
          the plugin now complains if CPAN has the package you want, but not of
          the required version or higher

0.003     2011-05-20 08:59:43 America/New_York
          "Config" is never considered an unindexed prereq

0.002     2011-02-05 15:14:56 America/New_York
          "perl" is never considered an unindexed prereq

0.001     2011-02-04 18:09:37 America/New_York