@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          add the skips parameter (Thanks, Christopher J. Madsen!)
 
 0.005     2011-09-08 08:35:50 America/New_York
           the LWP::UserAgent should now respect HTTP proxies specified by the
